--- a/balance-and-ruin/package.json
+++ b/balance-and-ruin/package.json
@@ -9,13 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "1.7.3",
+    "@heroicons/react": "2.0.12",
     "next": "12.3.1",
+    "postcss": "8.4.18",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "3.39.2",
+    "tailwindcss": "3.1.8"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "6.5.12",
+    "@storybook/addon-actions": "6.5.12",
+    "@storybook/addon-essentials": "6.5.12",
+    "@storybook/addon-interactions": "6.5.12",
+    "@storybook/addon-links": "6.5.12",
+    "@storybook/builder-webpack5": "6.5.12",
+    "@storybook/manager-webpack5": "6.5.12",
+    "@storybook/react": "6.5.12",
+    "@storybook/testing-library": "0.0.13",
+    "@types/node": "18.8.5",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.40.0",
+    "@typescript-eslint/parser": "5.40.0",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react-hooks": "4.6.0",
     "typescript": "4.8.4"
   }
 }
