--- a/balance-and-ruin/package.json
+++ b/balance-and-ruin/package.json
@@ -28,6 +28,7 @@
     "@storybook/manager-webpack5": "6.5.12",
     "@storybook/react": "6.5.12",
     "@storybook/testing-library": "0.0.13",
+    "@types/axios": "0.14.0",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
