--- a/balance-and-ruin/package.json
+++ b/balance-and-ruin/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@headlessui/react": "1.7.3",
     "@heroicons/react": "2.0.12",
     "next": "12.3.1",
     "postcss": "8.4.18",
+    "rc-slider": "10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
@@ -29,18 +31,26 @@
     "@storybook/react": "6.5.12",
     "@storybook/testing-library": "0.0.13",
     "@tailwindcss/forms": "0.5.3",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/axios": "0.14.0",
+    "@types/jest": "29.2.0",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
+    "babel-jest": "29.2.2",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "29.2.2",
+    "jest-environment-jsdom": "29.2.2",
+    "ts-jest": "29.0.3",
     "typescript": "4.8.4"
   }
 }
