fix build errors

--- a/balance-and-ruin/.env
+++ b/balance-and-ruin/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_DISCORD_CLIENT_ID=1030084792148041748 # balance-and-ruin-dev discord auth client https://discord.com/developers/applications/1030084792148041748
+NEXT_PUBLIC_DISCORD_CLIENT_ID=1030084792148041748
 NEXT_PUBLIC_DISCORD_AUTH_REDIRECT_URI=https://balance-and-ruin-weffjebster.vercel.app/discord/connect
