--- a/balance-and-ruin/package.json
+++ b/balance-and-ruin/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-testing-library": "5.9.1",
     "jest": "29.2.2",
     "jest-environment-jsdom": "29.2.2",
     "ts-jest": "29.0.3",
