--- a/balance-and-ruin/package.json
+++ b/balance-and-ruin/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.3",
     "@heroicons/react": "2.0.12",
+    "lodash": "4.17.21",
     "next": "12.3.1",
     "postcss": "8.4.18",
     "rc-slider": "10",
