--- a/balance-and-ruin/package.json
+++ b/balance-and-ruin/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@headlessui/react": "1.7.3",
     "@heroicons/react": "2.0.12",
+    "@next/font": "13.0.2",
+    "@reduxjs/toolkit": "1.9.0",
+    "@welldone-software/why-did-you-render": "7.0.1",
     "lodash": "4.17.21",
-    "next": "12.3.1",
+    "next": "13.0.2",
     "postcss": "8.4.18",
+    "python-shell": "3.0.1",
     "rc-slider": "10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
+    "react-redux": "8.0.5",
     "tailwindcss": "3.1.8"
   },
   "devDependencies": {
@@ -37,14 +42,14 @@
     "@testing-library/user-event": "14.4.3",
     "@types/axios": "0.14.0",
     "@types/jest": "29.2.0",
-    "@types/node": "18.8.5",
+    "@types/node": "18.11.9",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
     "babel-jest": "29.2.2",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "13.0.2",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
