--- a/balance-and-ruin/package.json
+++ b/balance-and-ruin/package.json
@@ -26,37 +26,19 @@
     "tailwindcss": "3.1.8"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "6.5.12",
-    "@storybook/addon-actions": "6.5.12",
-    "@storybook/addon-essentials": "6.5.12",
-    "@storybook/addon-interactions": "6.5.12",
-    "@storybook/addon-links": "6.5.12",
-    "@storybook/builder-webpack5": "6.5.12",
-    "@storybook/manager-webpack5": "6.5.12",
-    "@storybook/react": "6.5.12",
-    "@storybook/testing-library": "0.0.13",
     "@tailwindcss/forms": "0.5.3",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/axios": "0.14.0",
-    "@types/jest": "29.2.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
-    "babel-jest": "29.2.2",
     "eslint": "8.25.0",
     "eslint-config-next": "13.0.2",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-testing-library": "5.9.1",
-    "jest": "29.2.2",
-    "jest-environment-jsdom": "29.2.2",
-    "ts-jest": "29.0.3",
+    "prettier": "2.7.1",
     "typescript": "4.8.4"
   }
 }
