Feature: start reworking main page

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "bash build.sh",
+    "prebuildf": "bash build.sh",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
     "autoprefixer": "10.4.13",
+    "cva": "npm:class-variance-authority@0.3.0",
     "eslint": "8.25.0",
     "eslint-config-next": "13.0.2",
     "eslint-config-prettier": "8.5.0",
