--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,9 @@
         "strings": true // forces VS Code to trigger completions when editing "string" content
     },
     "tailwindCSS.experimental.classRegex": [
-        "tw`([^`]*)", // tw`...`
-        "tw\\.[^`]+`([^`]*)`", // tw.xxx<xxx>`...`
-        "tw\\(.*?\\).*?`([^`]*)" // tw(Component)<xxx>`...`
-    ]
+        "cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]",
+        "tw`([^`]*)", 
+        "tw\\.[^`]+`([^`]*)`",
+        "tw\\(.*?\\).*?`([^`]*)"
+    ],
 }
